pytrace.txt
-------------- Python-PSP started Fri Dec  4 23:37:57 2020

Free memory: 1167360
PyPSP running in: ms0:/PSP/GAME/BEAST_UTILS
Search path: python.zip;ms0:/PSP/GAME/lib/python21.zip;ms0:/PSP/GAME/BEAST_UTILS/python/site-packages;ms0:/PSP/GAME/BEAST_UTILS/python

Traceback (most recent call last):
  File "script.py", line 4, in <module>
    from beastlib.framework import Engine, Actor, Renderable, Tickable, SCREEN_W, SCREEN_H
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 46
    def add_child(self, child=None, child_id=None):
      ^
IndentationError: expected an indented block
--------------------------------------------------------------------------------
-------------- Python-PSP started Fri Dec  4 23:37:59 2020

Free memory: 1167360
PyPSP running in: ms0:/PSP/GAME/BEAST_UTILS
Search path: python.zip;ms0:/PSP/GAME/lib/python21.zip;ms0:/PSP/GAME/BEAST_UTILS/python/site-packages;ms0:/PSP/GAME/BEAST_UTILS/python

Traceback (most recent call last):
  File "script.py", line 4, in <module>
    from beastlib.framework import Engine, Actor, Renderable, Tickable, SCREEN_W, SCREEN_H
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 46
    def add_child(self, child=None, child_id=None):
      ^
IndentationError: expected an indented block
--------------------------------------------------------------------------------
-------------- Python-PSP started Fri Dec  4 23:44:06 2020

Free memory: 1167360
PyPSP running in: ms0:/PSP/GAME/BEAST_UTILS
Search path: python.zip;ms0:/PSP/GAME/lib/python21.zip;ms0:/PSP/GAME/BEAST_UTILS/python/site-packages;ms0:/PSP/GAME/BEAST_UTILS/python

Starting pspogg
script.py:110: DeprecationWarning: integer argument expected, got float
  self.sprite.height, self.position.x, self.position.y, True)
script.py:29: DeprecationWarning: integer argument expected, got float
  self.sprite.height, self.position.x, self.position.y, True)
Traceback (most recent call last):
  File "script.py", line 221, in <module>
    stackless.run()
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 103, in tick
    self.on_tick(delta)
  File "script.py", line 25, in on_tick
    Actor.on_tick(self, delta)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 115, in on_tick
    PadButtonsObserver.on_tick(self, delta)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 159, in on_tick
    if   pad.cross:     self.is_button_throttled("cross") and self.on_pad_cross(pad)
  File "script.py", line 35, in on_pad_cross
    engine.die()
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 88, in die
    Tickable.die(self)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 48, in die
    for k in self.children: self.children[k].die()
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 44, in die
    Tickable.die(self)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 47, in die
    self.parent.remove_child(self)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 63, in remove_child
    del self.children[c]
KeyError: <beastlib.framework.Renderer object at 0x8f10790>
--------------------------------------------------------------------------------
-------------- Python-PSP started Fri Dec  4 23:44:16 2020

Free memory: 1167360
PyPSP running in: ms0:/PSP/GAME/BEAST_UTILS
Search path: python.zip;ms0:/PSP/GAME/lib/python21.zip;ms0:/PSP/GAME/BEAST_UTILS/python/site-packages;ms0:/PSP/GAME/BEAST_UTILS/python

Starting pspogg
script.py:110: DeprecationWarning: integer argument expected, got float
  self.sprite.height, self.position.x, self.position.y, True)
script.py:29: DeprecationWarning: integer argument expected, got float
  self.sprite.height, self.position.x, self.position.y, True)
Traceback (most recent call last):
  File "script.py", line 221, in <module>
    stackless.run()
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 103, in tick
    self.on_tick(delta)
  File "script.py", line 25, in on_tick
    Actor.on_tick(self, delta)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 115, in on_tick
    PadButtonsObserver.on_tick(self, delta)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 159, in on_tick
    if   pad.cross:     self.is_button_throttled("cross") and self.on_pad_cross(pad)
  File "script.py", line 35, in on_pad_cross
    engine.die()
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 88, in die
    Tickable.die(self)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 48, in die
    for k in self.children: self.children[k].die()
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/framework.py", line 44, in die
    Tickable.die(self)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 47, in die
    self.parent.remove_child(self)
  File "ms0:/PSP/GAME/BEAST_UTILS/beastlib/core.py", line 63, in remove_child
    del self.children[c]
KeyError: <beastlib.framework.Renderer object at 0x8ef7790>
--------------------------------------------------------------------------------
